Implement logging, assertions, validations, and multi-browser support
- Added logger using Log4j2
- Implemented assertions for better validation and error handling
- Added page title and header validations
- Implemented support for multiple browsers using TestNG XML
- Enabled parallel execution for tests

--- a/src/test/resources/configurations/default.properties
+++ b/src/test/resources/configurations/default.properties
@@ -1,7 +1,17 @@
 # key=value mappings
 
-# Browser
-browser=chrome
+# Default Browser
+defaultBrowser=CHROME
 
 # Application URL
-sauceDemo.URL = https://www.saucedemo.com/
+sauceDemo.URL=https://www.saucedemo.com/
+
+# Valid User Credentials
+valid.username=standard_user
+valid.password=secret_sauce
+
+# Locked Out User Credentials 
+lockedOut.username=locked_out_user
+
+# Invalid User Credentials 
+invalid.password=wrongPassword
